force-app/main/default/objects/DocuSignReminder__c/DocuSignReminder__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DocuSignReminder</label>
</CustomObject>