force-app/main/default/objects/DocuSignReminder__c/fields/ExpireAfter__c.field-meta.xml
<CustomField>
    <fullName>ExpireAfter__c</fullName>
    <label>ExpireAfter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>