force-app/main/default/objects/DocuSignReminder__c/fields/ExpireWarn__c.field-meta.xml
<CustomField>
    <fullName>ExpireWarn__c</fullName>
    <label>ExpireWarn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>