force-app/main/default/objects/DocuSignReminder__c/fields/ReminderDelay__c.field-meta.xml
<CustomField>
    <fullName>ReminderDelay__c</fullName>
    <label>ReminderDelay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>