force-app/main/default/objects/DocuSignReminder__c/fields/ReminderFrequency__c.field-meta.xml
<CustomField>
    <fullName>ReminderFrequency__c</fullName>
    <label>ReminderFrequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>